# AAT

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  PROJECT_SPEC.md  PROJECT_STATUS.md  README.md  SETUP.md  SUBAGENTS.md  docker-compose.yml  env.example  pyproject.toml
adapters/: __init__.py  config.py  protocol.py  source_policy.py
alembic/: env.py
api/: main.py  schemas.py
config/: entity_resolver_cases.json  env.py  mvp_universe.json  pilot_sp500_universe.json
dashboard/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
db/: __init__.py  models.py  session.py
docs/: AAT_FUNCTIONAL_REPORT.md  FAUSTCALC_DATA_IMPLEMENTATION_REPORT.md  LIVE_BACKFILL_DEVELOPMENT_GUARDRAILS.md  RESIDUAL_SHARE_METHODOLOGY_ISSUE.md  TEMP_attribute_implementation_plan.md  VERCEL_CLOUDFLARE_TUNNEL_DEPLOYMENT.md  aat_architecture_attribute_expansion_report.md  attribution_methodology.md  compliance_checklist.md  data_licensing.md  exposure_update_policy.md
engine/: __init__.py  contracts.py  narrative.py  time.py
jobs/: __init__.py  advisory_locks.py  build_faustcalc_universe.py  build_proxy_factor_returns.py  check_pilot_sp500_progress.py  evaluate_exposure_updates.py  evaluate_pilot_methodologies.py  faustcalc_common.py  generate_event_features.py  import_faustcalc_feature_store.py  import_faustcalc_sec_filings.py  ingest_edgar_submissions.py  ingest_fmp_prices.py  ingest_fred_macro.py  ingest_french_factors.py  init_pilot_sp500_db.py  pilot_sp500_common.py  populate_pilot_sp500_data.py  refresh_attribution_summaries.py  run_attribution.py  (+10 more)
(+103 files in other folders)
