[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "single-stock-attribution"
version = "0.1.0"
description = "Research-grade single-stock attribution engine"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "numpy>=1.26",
  "polars>=0.20",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "adapters*", "config*", "db*", "engine*", "jobs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
